[tool.poetry]
name = "hansard_server"
version = "0.1.0"
description = ""
authors = ["roycehoe <royceinbox@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.97.0"
redis = {extras = ["hiredis"], version = "^4.5.5"}
requests-mock = "^1.11.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
loguru = "^0.7.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
